--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,15 @@
   padding: 0;
 }
 
+html {
+  background: url("../img/bg.png") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  overflow-x: hidden;
+  /* overflow-y: hidden; */
+}
 /* navbar */
 
 ul {
@@ -12,7 +21,6 @@ ul {
   padding: 0;
   width: 11%;
   background-color: #ffffff;
-  /* opacity: 60%; */
   position: absolute;
   height: 100%;
   overflow: auto;
@@ -60,11 +68,9 @@ li a:hover:not(.active) {
 /* gambar kanan kiri */
 .img-fluid-right {
   position: absolute;
-  width: 500px;
+  width: 60vw;
   height: auto;
-  top: 50px;
-  right: 50px;
-  opacity: 100% !important;
+  display: block;
 }
 
 .img-fluid-left {
@@ -73,127 +79,265 @@ li a:hover:not(.active) {
   height: auto;
   top: 50px;
   left: 50px;
-  opacity: 100% !important;
 }
 
-/* background */
-.masthead {
-  background-image: url("../img/bg.png");
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-  background-repeat: repeat;
-}
-
-/* jumbotron utama */
-.jumbotron {
-  background-color: #ffffff;
-  width: 1000px;
+.col-10 {
   height: 600px;
   position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0);
-  margin-left: 90px;
-  margin-top: 75px;
+  background-color: rgba(255, 255, 255, 0.658);
+  margin-top: 5rem;
+  margin-bottom: 5rem;
   border-radius: 30px;
-  /* opacity: 60%; */
 }
 
-/* button */
+/* responsive landing page */
+/* // Extra Small devices (landscape phones, 576px and up) */
+@media (min-width: 200px) {
+  h1,
+  h2,
+  h3 {
+    padding-left: 10px;
+  }
+  h1 {
+    margin-top: 9rem;
+    font-size: 15pt;
+    color: #da62a2;
+  }
+  h2 {
+    font-size: 21pt;
+    color: #520070;
+  }
+  h3 {
+    margin-top: 1rem;
+    font-size: 7pt;
+    color: #5c5c5c;
+  }
+  .img-fluid-right {
+    width: 30vw;
+    margin-top: 9rem;
+    margin-left: -15px;
+  }
+  .col-lg-10 {
+    height: 74vh;
+  }
+  .btn-dark {
+    width: 50px;
+    font-size: 7pt;
+    height: fit-content;
+    text-align: center;
+  }
+  .btn-sign-up {
+    margin-left: 1rem;
+    padding: 0;
+  }
+
+  .btn-sign-in {
+    margin-left: 10px;
+    padding: 0;
+  }
+}
+
+/* // Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+  h1,
+  h2,
+  h3 {
+    padding-left: 10px;
+  }
+  h1 {
+    margin-top: 8rem;
+    font-size: 15pt;
+    color: #da62a2;
+  }
+  h2 {
+    font-size: 21pt;
+    color: #520070;
+  }
+  h3 {
+    margin-top: 1rem;
+    font-size: 7pt;
+    color: #5c5c5c;
+  }
+  .img-fluid-right {
+    width: 30vw;
+    margin-top: 8rem;
+    margin-left: -15px;
+  }
+  .col-lg-10 {
+    height: 74vh;
+  }
+  .btn-dark {
+    width: 50px;
+    font-size: 7pt;
+    height: fit-content;
+    text-align: center;
+  }
+  .btn-sign-up {
+    margin-left: 1rem;
+  }
+
+  .btn-sign-in {
+    margin-left: 10px;
+  }
+}
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  h1,
+  h2,
+  h3 {
+    padding-left: 2rem;
+  }
+  h1 {
+    margin-top: 6rem;
+    font-size: 23pt;
+    color: #da62a2;
+  }
+  h2 {
+    font-size: 34pt;
+    color: #520070;
+  }
+  h3 {
+    margin-top: 1rem;
+    font-size: 10pt;
+    color: #5c5c5c;
+  }
+  .img-fluid-right {
+    width: 30vw;
+    margin-top: 6rem;
+    margin-left: 0rem;
+  }
+  .col-lg-10 {
+    height: 74vh;
+  }
+  .btn-dark {
+    width: 100px;
+    font-size: 10pt;
+    height: fit-content;
+    text-align: center;
+  }
+  .btn-sign-up {
+    margin-left: 2rem;
+    padding: 0.375rem 0.75rem;
+  }
+
+  .btn-sign-in {
+    margin-left: 15px;
+    padding: 0.375rem 0.75rem;
+  }
+}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  h1,
+  h2,
+  h3 {
+    padding-left: 4rem;
+  }
+  h1 {
+    margin-top: 4rem;
+    font-size: 28pt;
+    color: #da62a2;
+  }
+  h2 {
+    font-size: 49pt;
+    color: #520070;
+  }
+  h3 {
+    margin-top: 1rem;
+    font-size: 13pt;
+    color: #5c5c5c;
+  }
+  .img-fluid-right {
+    width: 30vw;
+    margin-top: 4rem;
+    margin-left: 2rem;
+  }
+  .col-lg-10 {
+    height: 74vh;
+  }
+  .btn-dark {
+    width: 100px;
+    font-size: 13pt;
+    height: fit-content;
+    text-align: center;
+  }
+  .btn-sign-up {
+    margin-left: 4rem;
+    padding: 0.375rem 0.75rem;
+  }
+
+  .btn-sign-in {
+    margin-left: 2rem;
+    padding: 0.375rem 0.75rem;
+  }
+}
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  h1,
+  h2,
+  h3 {
+    padding-left: 5rem;
+  }
+  h1 {
+    margin-top: 3rem;
+    font-size: 29pt;
+    color: #da62a2;
+  }
+  h2 {
+    font-size: 60pt;
+    color: #520070;
+  }
+  h3 {
+    margin-top: 1rem;
+    font-size: 13pt;
+    color: #5c5c5c;
+  }
+  .img-fluid-right {
+    width: 30vw;
+    margin-top: 2rem;
+    margin-left: 3rem;
+  }
+  .col-lg-10 {
+    height: 74vh;
+  }
+  .btn-dark {
+    width: 100px;
+    font-weight: 13pt;
+    height: fit-content;
+    text-align: center;
+  }
+  .btn-sign-up {
+    margin-left: 5rem;
+    padding: 0.375rem 0.75rem;
+  }
+
+  .btn-sign-in {
+    margin-left: 2rem;
+    padding: 0.375rem 0.75rem;
+  }
+}
+
+.justify-content-center {
+  background-color: transparent;
+}
 
 .btn {
   text-align: center;
-  border-radius: 20px;
-  margin-left: 50px;
-  margin-top: 20px;
-  width: 100px;
+  border-radius: 1rem;
+  height: 3px;
   top: 50%;
   left: 50%;
+  margin-top: 1rem;
 }
 
 .btn-dark {
-  width: 100px;
+  height: fit-content;
   text-align: center;
   color: #fff;
   background-color: #520070;
   border-color: #520070;
-}
-
-/*form login*/
-
-a {
-  text-decoration: none !important;
-  color: #520070;
-  text-decoration: none;
-  background-color: transparent;
-}
-
-.myform {
-  margin-left: 325px;
-  margin-right: 0;
-  position: relative;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 1rem;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  width: 100%;
-  pointer-events: auto;
-  background-color: #c18ad4;
-  background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 1.1rem;
-  outline: 0;
-  width: 300px;
-}
-.tx-tfm {
-  text-transform: uppercase;
-}
-.mybtn {
-  border-radius: 50px;
-}
-
-.login-or {
-  position: relative;
-  color: #aaa;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-.span-or {
-  display: block;
-  position: absolute;
-  left: 50%;
-  top: -2px;
-  margin-left: -25px;
-  background-color: #c18ad4;
-  color: #ffffff;
-  width: 50px;
-  text-align: center;
-}
-.hr-or {
-  height: 1px;
-  margin-top: 0px !important;
-  margin-bottom: 0px !important;
-}
-.google {
-  background-color: #ffffff;
-  color: #520070;
-  width: 100%;
-  height: 40px;
-  text-align: center;
-  outline: none;
-}
-form .error {
-  color: #ff0000;
-}
-#second {
-  display: none;
-}
-
-.text-center {
-  color: #ffffff;
 }
 
 /* peringkat */
