--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,6 +126,10 @@ li a:hover:not(.active) {
     height: fit-content;
     text-align: center;
   }
+  .btn {
+    border: 1px solid;
+    box-shadow: 2px 2px #520070;
+  }
   .btn-sign-up {
     margin-left: 1rem;
     padding: 0;
@@ -165,6 +169,10 @@ li a:hover:not(.active) {
   }
   .col-lg-10 {
     height: 74vh;
+  }
+  .btn {
+    border: 1px solid;
+    box-shadow: 2px 2px #520070;
   }
   .btn-dark {
     width: 50px;
@@ -209,6 +217,10 @@ li a:hover:not(.active) {
   }
   .col-lg-10 {
     height: 74vh;
+  }
+  .btn {
+    border: 1px solid;
+    box-shadow: 4px 4px #520070;
   }
   .btn-dark {
     width: 100px;
@@ -256,6 +268,10 @@ li a:hover:not(.active) {
   .col-lg-10 {
     height: 74vh;
   }
+  .btn {
+    border: 1px solid;
+    box-shadow: 4px 4px #520070;
+  }
   .btn-dark {
     width: 100px;
     font-size: 13pt;
@@ -302,6 +318,10 @@ li a:hover:not(.active) {
   .col-lg-10 {
     height: 74vh;
   }
+  .btn {
+    border: 1px solid;
+    box-shadow: 4px 4px #520070;
+  }
   .btn-dark {
     width: 100px;
     font-weight: 13pt;
@@ -319,13 +339,9 @@ li a:hover:not(.active) {
   }
 }
 
-.justify-content-center {
-  background-color: transparent;
-}
-
 .btn {
   text-align: center;
-  border-radius: 1rem;
+  border-radius: 2rem;
   height: 3px;
   top: 50%;
   left: 50%;
@@ -335,17 +351,14 @@ li a:hover:not(.active) {
 .btn-dark {
   height: fit-content;
   text-align: center;
-  color: #fff;
-  background-color: #520070;
+  color: #520070;
+  background-color: #d1b1dd;
   border-color: #520070;
+  font-weight: bold;
 }
 
-/* peringkat */
-
-.table {
-  width: 440px;
-  height: auto;
-  margin-left: 490px;
-  margin-top: 20px;
-  text-align: center;
+.pop-up-about {
+  line-height: 3.5rem;
+  padding-left: 28rem;
+  color: #520070;
 }
